# deepnoc

./: README.md  main.py  pyproject.toml
models/baseline/: baselines.py
models/deepnoc/: architecture.py  losses.py  train.py
src/: constants.py  data_loader.py  evaluation.py
